Added images and text

--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ashish Garg's Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Neucha" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    
+    <div class="hero-image">
+        <div class="top-bar">
+            <h2 class="title-bar">
+                Ashish.Garg
+            </h2>
+            <ul class="nav">
+                <li>About</li>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="welcome-message">
+            <h1 class="welcome-statement">
+                Software Engineer in Training.
+            </h1>
+            <h3 class="welcome-statement">
+                University of Georgia student pursuing a career as a Software Engineer.
+            </h3>
+        </div>
+    </div>
 </body>
 </html>
