Adds background image, aligns text, adds shadow boxes to see text better

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </ul>
         </div>
         <div class="welcome-message">
-            <h1 class="welcome-statement">
-                Software Engineer in Training.
+            <h1 class="welcome-title">
+                Software Engineer in Training
             </h1>
             <h3 class="welcome-statement">
-                University of Georgia student pursuing a career as a Software Engineer.
+                University of Georgia student with an addiction to learn pursuing a career as a Software Engineer.
             </h3>
         </div>
     </div>
